# rustv-os-lab

./: .gitignore  Cargo.toml  Makefile  README.md  push_project.sh  rust-toolchain.toml
.cargo/: config.toml
docs/: memory-map.md  roadmap.md
scripts/: qemu.ps1
src/: lib.rs  main.rs
src/asm/: boot.S
src/console/: mod.rs
src/drivers/: mmio.rs  mod.rs  uart.rs
src/lds/: virt.lds
src/memory/: address.rs  mod.rs  page_allocator.rs  sv39.rs
src/riscv/: csr.rs  mod.rs
src/sync/: mod.rs
src/syscall/: mod.rs
src/task/: mod.rs
src/trap/: cause.rs  frame.rs  mod.rs
