[package]
name = "rustv-os-lab"
version = "0.1.0"
edition = "2021"
authors = ["yabtesfu"]
description = "An educational RISC-V operating system lab in Rust."
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rustv-os-lab"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

